# equity-ledger

./: .env.example  .firebaserc  .gitignore  PRODUCT_SPEC.md  README.md  firebase.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
equity-ledger/: .gitignore  README.md  pyproject.toml
equity-ledger/bse_collector/: __init__.py  __main__.py  cli.py  config.py  db.py  export.py  fetch.py  logging_config.py  parser.py
equity-ledger/ecse_collector/: __init__.py  __main__.py  cli.py  config.py  db.py  export.py  fetch.py  parser.py
equity-ledger/gasci_collector/: __init__.py  __main__.py  cli.py  config.py  db.py  discover.py  export.py  fetch.py  models.py  normalize.py  validate.py
equity-ledger/gasci_collector/parse/: companies.py  trade_sessions.py
equity-ledger/tests/: test_bse_parser.py  test_date_filtering.py  test_db_idempotency.py  test_ecse_parser.py  test_fetch.py  test_gasci_companies_parser.py  test_gasci_discover.py  test_gasci_validate.py  test_normalize.py  test_price_parsing.py  test_security_matching.py
equity-ledger/tests/fixtures/: securities_page.html  trade_session_1174.html  trades_page.html
scratch/: backfill_gasci_prices.ts  backfill_indices_db.ts  capture_index_detail.js  capture_markets.js  capture_prod.js  capture_prod_interactive.js  capture_prod_mock.js  check_scopes.js  debug_prod_console.js  debug_tokens.js  fetch_gbti_rest.js  import_bse_prices.ts  inspect_config.js  inspect_db.ts  inspect_indices.ts  inspect_prices.ts  purge_legacy_prices.ts  (+4 more)
(+28 files in other folders)
