[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gasci_collector"
version = "0.1.0"
description = "Offline data collection tool for Guyana Stock Exchange (GASCI)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
gasci-collector = "gasci_collector.cli:main"
bse-collector = "bse_collector.cli:main"
